update command docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     front:
         container_name: front
-        command: npm install --save && npm start
+        command: bash -c "npm install --save && npm start"
         image: bayesimpact/react-base
         volumes:
             - "./front/:/home/front"
@@ -10,7 +10,7 @@ services:
             - "8080:8080"  
     api:
         container_name: api
-        command: npm install --save && npm start
+        command: bash -c "npm install --save && npm start
         image: node:9.4.0-alpine
         volumes:
             - "./api/:/home/app"
