--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '3'
 services:
     front:
+        volumes:
+            - "./front/:/home/app/"
         container_name: front
-        command: bash -c "npm install --save && npm start"
+        command: sh -c "cd /home/app && npm install --save && npm start"
         image: bayesimpact/react-base
-        volumes:
-            - "./front/:/home/front"
+
         ports:
-            - "8080:8080"  
+            - "3000:3000"  
     api:
-        container_name: api
-        command: bash -c "npm install --save && npm start
-        image: node:9.4.0-alpine
         volumes:
-            - "./api/:/home/app"
+            - "./api/:/home/app/"
+        container_name: api
+        command: sh -c "cd /home/app && npm install --save && npm start"
+        image: node:9.4.0-alpine
         ports:
-            - "3000:3000"
+            - "8080:8080"
