--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
   "author": "Peter Coles",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
